@@ -1,3 +1,14 @@
+2016-11-05  Eric Herman <eric@freesa.org>
+
+	fix a bug in ehbi_bytes_shift_left
+
+	it would read bytes from off the end of the array!
+
+	* tests/test-shift-left.c: demostrate the bug
+	* src/ehbigint.c: fix the bug
+	* Makefile.am: include the new test
+	* .gitignore: exclude the new test
+
 2016-11-04  Eric Herman <eric@freesa.org>
 
 	reorganize code: split logging and util functions out
